# reportrx

./: .gitignore  AGENTS.md  AUTH_AUDIT_INDEX.md  AUTH_PIPELINE_FIXES.md  CHANGES_MADE.md  LM_STUDIO_API_GUIDE.md  LM_STUDIO_SETUP.md  QUICKSTART.md  README.md  RUN_ME.md  SETUP_GUIDE.md  package.json  pnpm-lock.yaml  zilliz-cloud-reportrx-username-password.txt
apps/api/: .env.example  .gitignore  package.json  pyproject.toml  seed.py  seed_demo.py  test_upload.py
apps/api/prisma/: schema.prisma
apps/api/src/: ai_clients.py  analyze.py  app.ts  auth.py  config.py  database.py  extraction.py  health.py  index.ts  ingestion.py  interpretation.py  liteparse.py  logging_setup.py  main.py  models.py  schemas.py  vector_store.py
apps/api/src/config/: env.ts
apps/api/src/middleware/: authMiddleware.ts
apps/api/src/routes/: analyze.py  analyze.ts  auth.py  auth.ts  http.ts  reports.py  reports.ts  trends.py
apps/api/src/scripts/: seed_catalog.py
apps/api/src/services/: aiClients.ts  analyzeService.ts  auth.ts  auth0.ts  prisma.ts  reportIngestion.ts  reportService.ts  vectorStore.ts
apps/api/src/workers/: ingestionWorker.ts  watchdog.py
apps/web/: AGENTS.md  middleware.ts  next.config.ts  package.json
apps/web/src/: middleware.ts  (+1 more)
diagrams/: erd.excalidraw
docs/: JU_Sample_Minor_Project_Report.docx  ReportRx_Project_Report_pi.tex  monorepo.md
docs/report/: Makefile  main.tex
public/: variant-1-editorial.html
server/: .env.example  package.json  pnpm-lock.yaml
server/prisma/: schema.prisma
server/src/: index.ts
web/: package.json  pnpm-lock.yaml
(+101 files in other folders)
