[project]
name = "reportrx-api"
version = "1.0.0"
description = "Medical Report Analyzer API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "qdrant-client>=1.18.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
reportrx-api = "src.main:main"

[tool.uvicorn]
app = "src.main:app"
host = "0.0.0.0"
port = 4000
reload = true
